; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_rev_file.c_svn_fs_x__rev_file_open_proto_rev.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_rev_file.c_svn_fs_x__rev_file_open_proto_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APR_READ = common dso_local global i32 0, align 4
@APR_BUFFERED = common dso_local global i32 0, align 4
@APR_OS_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_x__rev_file_open_proto_rev(i32** %0, i32* %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32*, i32** %10, align 8
  %15 = call i32 @svn_fs_x__path_txn_proto_rev(i32* %12, i32 %13, i32* %14)
  %16 = load i32, i32* @APR_READ, align 4
  %17 = load i32, i32* @APR_BUFFERED, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @APR_OS_DEFAULT, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @svn_io_file_open(i32** %11, i32 %15, i32 %18, i32 %19, i32* %20)
  %22 = call i32 @SVN_ERR(i32 %21)
  %23 = load i32**, i32*** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @svn_fs_x__rev_file_wrap_temp(i32** %23, i32* %24, i32* %25, i32* %26)
  %28 = call i32* @svn_error_trace(i32 %27)
  ret i32* %28
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_io_file_open(i32**, i32, i32, i32, i32*) #1

declare dso_local i32 @svn_fs_x__path_txn_proto_rev(i32*, i32, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_fs_x__rev_file_wrap_temp(i32**, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
